stereokit_c_includes = include_directories('.', './lib/include_no_win')

openxr = dependency('openxr', required: true)

subdir('asset_types')
# subdir('lib')
# subdir('libraries')
# subdir('shaders_builtin')
subdir('systems')
#
# library(
# 	'stereokit_c',
# 	files(
# 		'color.cpp',
# 		'hierarchy.cpp',
# 		'intersect.cpp',
# 		'log.cpp',
# 		'sk_math.cpp',
# 		'spherical_harmonics.cpp',
# 		'stereokit_ui.cpp',
# 		'stereokit.cpp'
# 	),
# 	include_directories: [stereokit_c_includes],
# 	dependencies: [asset_types, systems, openxr]
# )
